# Taxi_ride_prediction

./: Mlmodel.ipynb  README.md  app.py  model.pkl  pyproject.toml
